Resolved chatbot overlapping BackToTop btn issue

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4058,8 +4058,8 @@ button:disabled:hover {
   width: 56px;
   height: 56px;
   color: #fff;
-  right: 20px;
-  bottom: 20px;
+  right: 25px;
+  bottom: 115px;
   border-radius: 8px;
   text-align: center;
   text-decoration: none;
@@ -6244,6 +6244,10 @@ footer a {
   position: absolute;
   top: -10px;
   left: -80px;
+}
+
+.card-min-height {
+  min-height: 90%;
 }
 
 .box-image-detail {
